syntax = "proto3";
package rpc;

//option go_package = "github.com/xvrzhao/pb-demo/proto/user";  // 声明生成的 go 文件所属的包
option go_package = "./;rpc";
//服务器类型
enum SERVICE{
    NONE= 0;
    CLIENT= 1;
    GATESERVER= 2;//网关,转发服务
    ACCOUNTSERVER=3;//账号
    WORLDSERVER=4;//世界
    ZONESERVER=5;//地图
    CENTERSERVER=6;
    LOGINSERVER=7;//登录服
    GRPCSERVER=8;//grpc服务器
    WORLDDBSERVER=9;//db
};

//发送标志
enum SEND{
    POINT = 0;//指定集群id
    BALANCE = 1;//负载
    BOARD_CAST = 2;//广播
};

//rpc 包头
message RpcHead{
    int64   Id = 1;//token
    uint32  SocketId = 2;
    uint32  SrcClusterId = 3;//源集群id
    uint32  DestClusterId = 4;//目标集群id
    SERVICE  DestServerType = 5;//目标集群
    SEND SendType = 6;
    string ActorName = 7;
	string Reply = 8;//call sessionid
}

//rpc 包
message RpcPacket{
    string FuncName = 1;
    int32 ArgLen = 2;
    RpcHead RpcHead = 3;
    bytes RpcBody = 4;
}

//集群信息
message ClusterInfo{
    SERVICE Type = 1;
    string Ip = 2;
    int32 Port = 3;
    int32 Weight = 4;
    uint32 SocketId = 5;
}

//原始包
message Packet{
	uint32 Id = 1;//socketid
	string Reply = 2;//call sessionid
	bytes Buff = 3;//buff
}

//玩家集群信息
message PlayerClusterInfo{
    int64 Id = 1;
    int64  LeaseId = 2;
    uint32 WClusterId = 3;
    uint32 ZClusterId = 4;
}